# Kafe

./: .gitignore  24-02-18.diff  CMakeLists.old.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  ISSUE_TEMPLATE.md  README.md  bytecode.hpp  instructions.hpp  main.cpp  ordered_map.hpp  tests.cpp  tests.hpp  utils.hpp  value.hpp  vm.cpp  vm.hpp
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
benchmarks/: README.md  benchmark.cpp  benchmark.py
cmake/: ExternalAntlr4Cpp.cmake
doc/: building.md  examples.md  installing.md  main.md  plugins.md  setup-as-scripting.md  vm.md
doc/lang/: main.md
examples/: bytecode1  bytecode2
examples/bytecode/: bytecode0  bytecode1  bytecode2  bytecode3  bytecode4  bytecode5  bytecode6
examples/plaintext/: all_kw_test.kafe  new_grammar.kafe  struct_test.kafe
grammar/: Kafe.g4
include/kafe/: KafeErrorListener.hpp  KafeException.hpp  api.hpp  constants.hpp  kafe.hpp  parser.hpp  types.hpp  utils.hpp
include/kafe/parser/: Kafe.interp  KafeLexer.cpp  KafeLexer.h  KafeLexer.interp  KafeLexer.tokens  KafeParser.cpp  KafeParser.h  generator.hpp  parser.hpp  visitor.hpp
include/kafe/plugins/: base.hpp  loader.hpp  packager.hpp
include/kafe/state/: native_function.hpp  refvar.hpp  state.hpp
include/kafe/vm/: bytecode.hpp  bytecodeBlocksMaker.hpp  errorHandler.hpp  instructions.hpp  value.hpp  vm.hpp  vm_lib.hpp
kafe/: constants.hpp  kafe.cpp  kafe.hpp  keywords.cpp  keywords.hpp  parser.cpp  parser.hpp  types.hpp  utils.hpp
kafe/lexer/: lexer.cpp  tokens.cpp
kafe/parser/: Kafe.interp  KafeBaseListener.cpp  KafeBaseListener.h  KafeBaseVisitor.cpp  KafeBaseVisitor.h  KafeLexer.cpp  KafeLexer.h  KafeLexer.tokens  KafeListener.cpp  KafeListener.h  KafeParser.cpp  KafeParser.h  KafeVisitor.cpp  KafeVisitor.h  parser.hpp
kafe/vm/: instructions.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
kafe/vm/optimizer/: optimizer.cpp  optimizer.hpp
lib/: CMakeLists.txt
parser/: _ast.py  _examples.py  _instructions.py  _keywords.py  _parser.py  _tokenizer.py  generateAST.py  generateBytecode.py  main.py
sources/kafe/: instructions.hpp  kafe.hpp  utils.hpp  value.hpp  vm.cpp  vm.hpp
sources/kafe/ast/: ast.hpp
sources/kafe/lexer/: lexer.hpp  tokens.hpp
sources/kafe/parser/: parser.cpp
sources/kafe/vm/: instructions.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
sources/kafe/vm/optimizer/: optimizer.cpp  optimizer.hpp  value.hpp
src/: CMakeLists.txt  Kafe.g  main.cpp
src/kafe/: CMakeLists.txt  KafeErrorListener.cpp  KafeErrorListener.hpp  constants.hpp  exc.hpp  exception.cpp  kafe.cpp  kafe.hpp  myexception.hpp  parser.cpp  parser.hpp  types.hpp  utils.cpp  utils.hpp
src/kafe/parser/: Kafe.interp  Kafe.tokens  KafeBaseListener.cpp  KafeBaseListener.h  KafeLexer.cpp  KafeLexer.h  KafeLexer.interp  KafeLexer.tokens  KafeListener.cpp  KafeListener.h  KafeParser.cpp  KafeParser.h  generator.cpp  parser.cpp  visitor.cpp
src/kafe/plugins/: loader.cpp  packager.cpp
src/kafe/state/: function.cpp  function.hpp  native_function.cpp  refvar.cpp  refvar.hpp  state.cpp  state.hpp
src/kafe/vm/: bytecode.cpp  bytecodeBlocksMaker.cpp  errorHandler.cpp  instructions.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp  vm_lib.cpp  vm_lib.hpp
src/tests/: README.md  tests.cpp  tests.hpp  utils.cpp
src/tests/benchmarks/: benchmark.py
tests/: benchmark_fibo.cpp  benchmark_fibo.py  tests.cpp  tests.hpp  utils.cpp
